--- a/app/partials/Razrab.html
+++ b/app/partials/Razrab.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
-    <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
-</html>
+
+
+<div class="hero-unit">
+                <h1 align="center">О проекте</h1>
+        </div>
+        <div class="well"> <div class="well">Участники разработки проекта:</div>
+               <ul>
+              <div class="span2"> <img src="img/yiu.jpg" height="130" width="130" alt="">    </div>
+                <i><p><b>Базыльян Ростислав Сергеевич</b> – Студент направления "Прикладная информатика в информационной сфере"      </p>   </ul> 
+                 <i><p><b>Подымова Екатерина Сергеевна</b> – Студентка направления "Прикладная информатика в информационной сфере"     </p>    </ul>         
+   </div>
+    
