--- a/app/partials/Razrab.html
+++ b/app/partials/Razrab.html
@@ -6,7 +6,7 @@
         <div class="well"> <div class="well">Участники разработки проекта:</div>
                <ul>
               <div class="span2"> <img src="img/yiu.jpg" height="130" width="130" alt="">    </div>
-                <i><p><b>Базыльян Ростислав Сергеевич</b> – Студент направления "Прикладная информатика в информационной сфере"      </p>   </ul> 
+                <i><p><b>Базыльян Ростислав Сергеевич=)</b> – Студент направления "Прикладная информатика в информационной сфере"      </p>   </ul> 
                  <i><p><b>Подымова Екатерина Сергеевна</b> – Студентка направления "Прикладная информатика в информационной сфере"     </p>    </ul>         
    </div>
     
