--- a/app/partials/Razrab.html
+++ b/app/partials/Razrab.html
@@ -3,7 +3,8 @@
 <div class="hero-unit">
                 <h1 align="center">О проекте</h1>
         </div>
-        <div class="well"> <div class="well">Участники разработки проекта:</div>
+        <div class="well"> <div class="well">Участники разработки проекта:
+            </div>
                <ul>
               <div class="span2"> <img src="img/yiu.jpg" height="130" width="130" alt="">    </div>
                 <i><p><b>Базыльян Ростислав Сергеевич=)</b> – Студент направления "Прикладная информатика в информационной сфере"      </p>   </ul> 
