Редактирование пункта "О проекте" (рус)

--- a/app/partials/Razrab.html
+++ b/app/partials/Razrab.html
@@ -1,13 +1,12 @@
-
-
 <div class="hero-unit">
                 <h1 align="center">О проекте</h1>
         </div>
-        <div class="well"> <div class="well">Участники разработки проекта:
+            <div class="well">
+                <p>Портал кафедры информатики предназначен для предоставления информации абитуриентам, студентам и преподавателям, о кафедре расписании научной деятельности и о инновационных методах обучения.</p>
+                <p>P.S. Так же, есть версия на английском языке</p>
             </div>
-               <ul>
-              <div class="span2"> <img src="img/yiu.jpg" height="130" width="130" alt="">    </div>
-                <i><p><b>Базыльян Ростислав Сергеевич=)</b> – Студент направления "Прикладная информатика в информационной сфере"      </p>   </ul> 
-                 <i><p><b>Подымова Екатерина Сергеевна</b> – Студентка направления "Прикладная информатика в информационной сфере"     </p>    </ul>         
-   </div>
-    
+            <div class="well">Участники разработки проекта:
+                <p>
+                <i><p><b><img src="img/yiu.jpg" height="130" width="130" alt="">Базыльян Ростислав Сергеевич</b> – Студент направления "Прикладная информатика в информационной сфере"</p></ul> 
+                <i><p><b><img src="img/yiu.jpg" height="130" width="130" alt="">Подымова Екатерина Сергеевна</b> – Студентка направления "Прикладная информатика в информационной сфере"</p></ul>         
+            </div>
