--- a/app/partials/Dock.html
+++ b/app/partials/Dock.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div>Здесь будут доки --></div>
+        <div class="well">
+            Здесь будут документы -->
+        </div>
     </body>
 </html>
