--- a/app/partials/Prep_s.html
+++ b/app/partials/Prep_s.html
@@ -23,7 +23,7 @@
 <tr>
       <td>1</td>
 <td width="105" valign="top">
-<p>Валеев Сагитт Сабитович</p>
+<p>Валеев Сагит Сабитович</p>
 </td>
 <td width="72" valign="top">
 <p>зав. кафедрой</p>
