--- a/app/en/partials/Dock.html
+++ b/app/en/partials/Dock.html
@@ -11,6 +11,8 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
-        <div>Here are the documents --></div>
+        <div class="well">
+            Here are the documents -->
+        </div>
     </body>
 </html>
