Возможно последние штрихи...

--- a/app/partials/Glavnaya.html
+++ b/app/partials/Glavnaya.html
@@ -6,19 +6,19 @@
               <div class="active item">
                   <img width="600" height="600" src="img/1.jpg"  alt="">
                   <div class="carousel-caption">
-                      <span style="color: white">2000год аспирант кафедры Павлов И.В. в рамках работы над кандидатской диссертацией разработал всемирно известный архиватор 7-zip (http://www.7-zip.org)</span>
+                      <span style="color: white">2000 год - аспирант кафедры Павлов И.В. в рамках работы над кандидатской диссертацией разработал всемирно известный архиватор 7-zip (http://www.7-zip.org)</span>
                   </div>
               </div>
               <div class="item">
                 <img width="600" height="600" src="img/2.jpg" alt="">   
                 <div class="carousel-caption">
-                    <span style="color: white">2012год первый набор бакалавров по направлению 230700 «Прикладная информатика»</span>
+                    <span style="color: white">2012 год - первый набор бакалавров по направлению 230700 «Прикладная информатика»</span>
                 </div>
               </div>
               <div class="item">
                   <img width="600" height="600" src="img/3.jpg" alt="">
                   <div class="carousel-caption">
-                      <span style="color: white">1990год создание кафедры Информатики на базе ВЦ УАИ</span>
+                      <span style="color: white">1990 год - создание кафедры Информатики на базе ВЦ УАИ</span>
                   </div>
               </div>
           </div>
